implement 12-hft-trading-gateway: real order book, HTTP facade, wire latency KPI, concurrent harness
- Replace MiniHttpServer stub with full in-memory price-time priority order book
  (PriorityQueue bid/ask heaps, crossing-price matching engine, virtual-thread executor)
- Add REST routes: POST/GET/DELETE /orders, legacy /grpc/* routes for harness compat
- Expose Prometheus metrics: gateway_orders_total, gateway_wire_latency_ns_total,
  gateway_matched_pairs_total, gateway_reject_count_total
- Upgrade BenchmarkHarness to concurrent load with configurable --threads and --runs;
  fix throughput to wall-clock measurement; scrape wire_latency_ns from /metrics
- Wire Grafana provisioning (datasources, dashboard provider) and add 6-panel dashboard
  (order rate, avg wire latency, matched pairs, request rate, reject rate, processors)
- Update docker-compose.yml with GF_SECURITY_ADMIN_PASSWORD and provisioning volumes
- Smoke test passes: REQUESTS=20 ./run.sh test emits valid results.json with
  wire_latency_ns, matched_pairs, reject_rate in mode_kpis

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>